<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">&#0043;</string>
    <string name="subtract">&#0045;</string>
    <string name="multiply">&#0215;</string>
    <string name="divide">&#0247;</string>
    <string name="power">^</string>
    <string name="equals">=</string>
    <string name="closingBracket">)</string>
    <string name="openingBracket">(</string>


    <string name="clear">C</string>
    <string name="all_clear">AC</string>

</resources>